# simple-gemm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci_github_runners.yaml
c/: CMakeLists.txt  Makefile  gemm-dense-blas.c  gemm-dense-blas64.c  gemm-dense-cublas.cu  gemm-dense-cublas64.cu  gemm-dense-cuda.cu  gemm-dense-cuda64.cu  gemm-dense-hip.c  gemm-dense-hip64.c  gemm-dense-hipblas.cpp  gemm-dense-openmp.c  gemm-dense-openmp16.c  gemm-dense-openmp64.c  gemm-dense-rocblas.cpp  gemm-dense-rocblas64.cpp  gemm-dense.c
cpp/: CMakeLists.txt  Makefile  gemm-dense-blas.cpp  gemm-dense-common.cpp  gemm-dense-common.h  gemm-dense-exec.cpp  gemm-dense-futures.cpp  gemm-dense-kokkos.cpp  gemm-dense-openmp.cpp  gemm-dense-thread.cpp  gemm-dense.cpp  run_threads.sh
cpp/Kokkos/Kokkos-CPU-double/: Makefile-wombat  test.cpp
cpp/Kokkos/Kokkos-CPU-float/: Makefile-crusher  test.cpp
cpp/Kokkos/Kokkos-GPU-double/: Makefile-crusher  test.cpp
cpp/Kokkos/Kokkos-GPU-float/: Makefile-wombat  test.cpp
fortran/: CMakeLists.txt  Makefile  gemm-dense-openmp.f03  gemm-dense-openmp.f90
julia/GemmDenseAMDGPU/: Project.toml  gemm-dense-amdgpu.jl
julia/GemmDenseBLAS/: Project.toml  gemm-dense-blas.jl
julia/GemmDenseCUBLAS/: Project.toml  gemm-dense-cublas.jl
julia/GemmDenseCUDA/: Project.toml  ReadMe.md  gemm-dense-cuda.jl
julia/GemmDenseKA/: Project.toml
julia/GemmDenseThreads/: Project.toml  (+1 more)
results/: Crusher-MI250X-GFLOPS.csv  Wombat-A100-GFLOPS.csv  notebook.jl
scripts/: run_threads.sh
simple-gemm.jl/: Project.toml  README.md
(+49 files in other folders)
